@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020151105"
-#define public MagickPackageReleaseDate "snapshot-20151105"
+#define public MagickPackageVersionAddendum ".020151106"
+#define public MagickPackageReleaseDate "snapshot-20151106"
