@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2015-11-06  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>magick/command.c (IdentifyImageCommand): Fix problem that
+identify with -format &quot;%A&quot; does not always report correct answer
+due to insufficient analysis of image.  Fixes SourceForge bug #326
+&quot;gm identify: transparency detection bug &quot;.</li>
+</ul>
+</blockquote>
 <p>2015-11-05  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
